--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,4 +1,5 @@
 @import url("@/assets/icon/iconfont.css");
+@import url("./App.css");
 @import url("./comm.less");
 @import url("./variables.less");
 
