--- a/src/layout/myLayout/main.module.less
+++ b/src/layout/myLayout/main.module.less
@@ -1,5 +1,10 @@
 .root {
     height: 100%;
     :global {
+        .loading {
+            width: 100%;
+            height: 100%;
+            background-color: skyblue;
+        }
     }
 }
