--- a/src/views/home/index.module.less
+++ b/src/views/home/index.module.less
@@ -47,6 +47,20 @@
             .module_card_text {
                 color: #FC8424;
             }
+
+            .ant-table-tbody>tr:nth-child(even) {
+                background-color: #ffffff;
+            }
+
+            .ant-table-tbody>tr:nth-child(odd) {
+                background-color: #F2F2FF;
+            }
+
+            .custom-row-height td{
+                height: 50px;
+                padding: 0 16px!important;
+                /* 设置自定义行高 */
+            }
         }
 
         .ant-card-body {
