--- a/src/layout/PersLayout/component/Header/index.module.less
+++ b/src/layout/PersLayout/component/Header/index.module.less
@@ -1,11 +1,20 @@
 .root {
     width: 100%;
     height: 60px;
-    background-color: #522FD1;
+    background-color: var(--PrimaryColor);
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-left: 250px;
+    padding-left: 260px;
     box-sizing: border-box;
-    :global {}
+
+    :global {
+        .custom_input {
+            border-radius: 30px;
+        }
+
+        .custom-icon {
+            cursor: pointer;
+        }
+    }
 }
