--- a/src/layout/PersLayout/component/LeftSider/index.module.less
+++ b/src/layout/PersLayout/component/LeftSider/index.module.less
@@ -21,7 +21,7 @@
             background: #fff;
 
             .ant-menu-item {
-                margin: 0;
+                margin: 10px 0;
                 border-radius: 0;
             }
 
