--- a/src/style/comm.less
+++ b/src/style/comm.less
@@ -1,5 +1,3 @@
-
-
 .main-content {
   width: 100vw;
   height: 100vh;
@@ -176,4 +174,14 @@
 
 .h-all {
   height: 100%;
+}
+
+.block {
+  display: block;
+}
+
+.ellipsis {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
